# rusty-jq

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: engine.rs  lib.rs  parser.rs
test/: benchmark.py  test_jr.py  test_lib.py
