[package]
name = "rusty-jq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusty_jq"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
nom = "7.1.3"
pythonize = "0.20"
simd-json = "0.17"
