[package]
name = "rusty-jq"
version = "2.1.0"
edition = "2021"

[lib]
name = "rusty_jq"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.0", features = ["extension-module"] }
nom = "7.1.3"
simd-json = "0.17"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"
